--- a/js/index.css
+++ b/js/index.css
@@ -1,8 +1,13 @@
 .card-form{position: absolute;top:100px;left:500px;width: 400px;height: 450px;border:1px solid black;border-radius: 4px;}
 .card-number{position: absolute;top:90px;left:20px;width: 200px;height: 27px;font-size: 20px;}.card-numb-word{position: absolute;top:50px;left:20px;font-size: 20px;}
-.logo label{position: absolute;top:10px;right: 20px;font-size: 20px;color: rgb(125, 125, 253);}.en{position: absolute;top:30px;left:20px;width: 40px;height: 30px;cursor: pointer;}
+.logo label{position: absolute;top:10px;right: 20px;font-size: 20px;color: rgb(125, 125, 253);}
 .card-holder{position: absolute;top:190px;left:20px;width: 200px;height: 27px;font-size: 20px;}.card-holder-word{position: absolute;top:150px;left:20px;font-size: 20px;}
 .cvv{position: absolute;top:290px;left:20px;width: 50px;height: 27px;font-size: 20px;}.cvv-word{position: absolute;top:250px;left:20px;font-size: 20px;}
 .button button{position: absolute;top:370px;left:100px;width: 200px;height: 30px;border-radius: 15px;background: white;border: 1px solid black;cursor: pointer;}
 .button button:hover{background-color: #00FFCC;}.inc{position: absolute;top:600px;left:620px;}.mastercard{position: absolute;top:10px;right:100px;width: 20px;height: 20px;background: red;border-radius: 10px;}
 .mastercard:before{position: absolute;top:0px;right: -10px;width: 20px;height: 20px;border-radius: 10px;background: orange;content: ' ';}
+.ru-flag{position: absolute;top:20px;left:20px;width: 20px;height: 15px;border:1px solid black}.ru-flag:before{content: ' ';position: absolute;top:10px;left:0;background: red;
+width: 20.5px;height: 5px;}.ru-flag:after{position: absolute;content: ' ';top:5px;left: 0;width: 20.5px;height: 5px;background: blue;}
+.us-flag{position: absolute;top:20px;left:50px;width: 20px;height: 15px;border:1px solid black;}.us-flag:before{position: absolute;content: ' ';
+top:0px;left:9px;width: 11.5px;height: 3px;background: red;}.us-flag:after{content: ' ';position: absolute;top:6px;left:0px;width: 20.5px;height: 2.7px;background: red;}
+.us-flagT{position: absolute;top:33px;left:51px;width: 20px;height: 3px;background: red;}
